[gd_scene load_steps=4 format=3 uid="uid://caj6sed5n17fw"]

[ext_resource type="Texture2D" uid="uid://bjnibtykc0pdx" path="res://components/ui/inventory_panel/inventory_panel.svg" id="1_jmk2y"]
[ext_resource type="Script" path="res://components/ui/inventory_panel/inventory_panel.gd" id="2_nvf1w"]
[ext_resource type="PackedScene" uid="uid://iirycnvbok0a" path="res://components/ui/inventory_slot/inventory_slot.tscn" id="4_djma4"]

[node name="InventoryPanel" type="NinePatchRect"]
offset_left = 1159.0
offset_top = 798.0
offset_right = 2130.0
offset_bottom = 2008.0
texture = ExtResource("1_jmk2y")
patch_margin_left = 34
patch_margin_top = 34
patch_margin_right = 34
patch_margin_bottom = 34
script = ExtResource("2_nvf1w")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 4

[node name="InventorySlot" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot2" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot3" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot4" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot5" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot6" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot7" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot8" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot9" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot10" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot11" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot12" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot13" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot14" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot15" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot16" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot17" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot18" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot19" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[node name="InventorySlot20" parent="CenterContainer/GridContainer" instance=ExtResource("4_djma4")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
